<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/tvAno"
        android:layout_width="35dp"
        android:layout_height="wrap_content"
        android:text="@string/ano"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=" | #"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tvKrause"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:textSize="14sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sepadar"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tvPais"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/pais"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/TextView02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sepadar"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tvValor"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/valor"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sepadar"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tvMoeda"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/moeda"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/TextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sepadar"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tvMaterial"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:text="@string/material"
        android:textSize="14sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sepadar"
        android:textSize="14sp" />



    <TextView
        android:id="@+id/tvId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id"
        android:textSize="14sp"
        android:visibility="invisible" />

</LinearLayout>