<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/fundo2coresest"
    android:gravity="center_horizontal|top"
    android:orientation="vertical"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    >

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="6000sp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="6dp"
            android:background="#fafafa">

            <TextView
                android:id="@+id/tvResumao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/resumo"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" "
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="35dp"
                    android:layout_height="wrap_content"
                    android:text="@string/ano"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" |  "
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:text="@string/krause"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sepadar"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/pais"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sepadar"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/valor"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sepadar"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/moeda"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sepadar"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="49dp"
                    android:layout_height="wrap_content"
                    android:text="@string/tipo"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sepadar"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:text="@string/material"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sepadar"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/diametro"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sepadar"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tvAnverso"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/anverso"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sepadar"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tvReverso"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/reverso"
                    android:textSize="12sp" />
            </LinearLayout>

            <ListView
                android:id="@+id/lvListagem"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="#fafafa"
                android:footerDividersEnabled="false"
                android:headerDividersEnabled="false"
                android:listSelector="#c5cccc"></ListView>
        </LinearLayout>

    </HorizontalScrollView>
</LinearLayout>